fixed horizontal scroll

--- a/static/app/styles/style.less
+++ b/static/app/styles/style.less
@@ -193,7 +193,6 @@ aside {
 		.graph {
 			display: none;
 			input[type="file"] {
-				margin: 10px;
 			}
 		}
 	}
